--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,6 +3,7 @@
     <h1>{{pageTitle}}</h1>
     <p><a href="/">Home </a></p>
     <p><a href="/about">About </a></p>
+    <p><a href="/project">Project </a></p>
     <p><a href="/help.html">Help </a></p>
 
 </head>
